# PCLLearning

./: README.md
downsampling/: CMakeLists.txt  downsampling.cpp
filter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  direct_filter  direct_filter.cpp  direct_filter_save_to_pcd.cpp
filter/passthrough/: CMakeLists.txt  passthrough.cpp
filter/voxel_grid/: voxel_grid.cpp
fixRealSensePly/: README.md  fix_realsense_ply.py
formatConvert/bin2ascii/: CMakeLists.txt  bin2ascii.cpp
formatConvert/pcd2txt/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pcd2txt.cpp
formatConvert/ply2pcd/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ply2pcd  ply2pcd.cpp  ply2pcd2.cpp  ply2pcd_simple.cpp
formatConvert/ply2pcd1/: CMakeCache.txt  Makefile  aa.pcd  cmake_install.cmake  ply2pcd  ply2pcd.cpp
formatConvert/txt2pcd/: CMakeLists.txt  txt2pcd.cpp
formatConvert/txt2pcd/pcd/: cluster_extraction.pcd  don_segmentation.pcd  min_cut_segmentation.pcd  region_growing_rgb_segmentation.pcd  region_growing_segmentation.pcd
formatConvert/txt2pcd/txt/: 00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  cluster_extraction.pts  don_segmentation.pts  min_cut_segmentation.pts  region_growing_rgb_segmentation.pts  region_growing_segmentation.pts
normal/: CMakeLists.txt  normal.cpp  normal1.cpp
pointCloudFiles/Eg_pointCloud/: rabbit.xyz
pointCloudFiles/apple/: 464_DEPTH.txt  497_DEPTH.txt
pointCloudFiles/tomato/: tomato_1_1_1.pcd  tomato_1_1_2.pcd  tomato_1_1_3.pcd  tomato_1_1_4.pcd  tomato_1_1_5.pcd  (+4 more)
(+35 files in other folders)
